Make sure the create-menu is not being hidden by a footer with negative top-margin.

--- a/webapp/theme/theme.less
+++ b/webapp/theme/theme.less
@@ -251,6 +251,7 @@ aside h3 {
 #create-menu {
     padding: 0 10px 10px;
     margin-left: -10px;
+    z-index: 1000;
 }
 
 #create-menu ul {
